Try to load module "dtrace" before opening "/dev/dtrace/dtrace".

Fixes PR kern/54387: DTrace Kernel module does not autoload on first use ...